--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -24,3 +24,15 @@ body {
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+.bg-f2f2f2 {
+  background-color: #fafafa;
+}
+
+.pointer {
+  cursor:pointer;
+}
+
+.bg-white {
+  background-color:#FFFFFF;
+}
