--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -22,7 +22,6 @@
 body {
   background: var(--background);
   color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
 }
 
 .bg-f2f2f2 {
@@ -48,6 +47,26 @@ li.cart-product-listing img {
 
 .align-items-center {
   align-items: center;
+}
+
+.fs-12 {
+  font-size:12px;
+}
+
+.top-20 {
+  top:20px;
+}
+
+.bg-light-danger {
+  background-color: #FFECEC;
+}
+
+.text-danger {
+  color: #DD1B1B;
+}
+
+.top-20 {
+  top:20px;
 }
 
 
