mobile responsive changes

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -99,6 +99,10 @@ li.cart-product-listing img {
     flex-basis: 10%;
 }
 
+.max-width-120px {
+  max-width: 100px;
+}
+
 
 @media screen and (min-width:500px) {
 
