--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -121,7 +121,9 @@ li.cart-product-listing img {
   line-height: normal;
 }
 
-
+.top-40 {
+  top:80px;
+}
 
 
 @media screen and (min-width:500px) {
@@ -162,4 +164,8 @@ li.cart-product-listing img {
   .cart-product-col-1 {
     width: 100%;
   }
+}
+
+@media screen and (max-width:768px) {
+    
 }
